Update pyproject and README

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,4 +32,5 @@ Issues = "https://github.com/kato-seigou/Detection5Invasive/issues"
 include-package-data = true
 
 [tool.setuptools.package.find]
-include = ["src/Detection5Invasive*"]
+where = ["src"]
+include = ["Detection5Invasive*"]
